refactor ingest as design
